# gboy-emu

./: .clangd  .gitignore  CMakeLists.txt  README.md  meson.build
src/: main.cpp
src/core/: common.hpp  cpu.hpp  instructions.cpp  instructions.hpp  memory.hpp
src/gui/: common.hpp  pixels.hpp
